chat wrok on webphone

--- a/DGSConsole/SignalRChat/Views/Home/WebPhone.cshtml
+++ b/DGSConsole/SignalRChat/Views/Home/WebPhone.cshtml
@@ -3,6 +3,22 @@
     ViewBag.Title = "WebPhone";
 }
 
+@using System.Security.Claims;
+@using System.Linq;
+@{
+    string email = "", name = "";
+    if (User.Identity.IsAuthenticated)
+    {
+        var user = User as ClaimsPrincipal;
+        var claims = user.Claims.ToList();
+        email = User.Identity.Name;
+        name = claims.Where(x => x.Type.Equals("Name")).FirstOrDefault().Value;
+    }
+    <script type='text/javascript'>
+        window.emailID = '@email';
+        window.name = '@name';      
+    </script>
+}
 <div class="dialpad-wraper" style="background-image:url(../../Scripts/Mizutech/images/3.png); background-size:cover; margin-top:50px;">
     <div class="dialpad-main">
         <div class="btn-group btn-group-justified" role="group" aria-label="...">
@@ -64,100 +80,81 @@
                         <div class="portlet portlet-default">
                             <div class="portlet-heading">
                                 <div class="portlet-title">
-                                    <h4><i class="fa fa-circle text-green"></i> Jane Smith</h4>
+                                    <h4><i class="fa fa-circle text-green"></i> <img src="/Content/DY6gND0.png" draggable="false" style="width:30px" /> <span id="receiverName">Jane Smith</span></h4>
                                 </div>
-                                <div class="portlet-widgets">
-                                    <div class="btn-group">
-                                        <button type="button" class="btn btn-white dropdown-toggle btn-xs" data-toggle="dropdown">
-                                            <i class="fa fa-circle text-green"></i> Status
-                                            <span class="caret"></span>
-                                        </button>
-                                        <ul id="dropdown" class="dropdown-menu" role="menu">
-                                            <li>
-                                                <a href="#"><i class="fa fa-circle text-green"></i> Online</a>
-                                            </li>
-                                            <li>
-                                                <a href="#"><i class="fa fa-circle text-orange"></i> Away</a>
-                                            </li>
-                                            <li>
-                                                <a href="#"><i class="fa fa-circle text-red"></i> Offline</a>
-                                            </li>
-                                        </ul>
-                                    </div>
-                                    <span class="divider"></span>
-                                    <a data-toggle="collapse" data-parent="#accordion" href="#chat"><i class="fa fa-chevron-down"></i></a>
-                                </div>
+
                                 <div class="clearfix"></div>
                             </div>
                             <div id="chat" class="panel-collapse collapse in">
                                 <div>
                                     <div class="portlet-body chat-widget" style="overflow-y: auto; width: auto; height: 300px;">
-                                        <div class="row">
-                                            <div class="col-lg-12">
-                                                <p class="text-center text-muted small">January 1, 2014 at 12:23 PM</p>
+                                        <ol class="chat" style="overflow-y: auto;max-height: 300px;"></ol>
+                                        @*<div class="row">
+                                                <div class="col-lg-12">
+                                                    <p class="text-center text-muted small">January 1, 2014 at 12:23 PM</p>
+                                                </div>
                                             </div>
-                                        </div>
-                                        <div class="row">
-                                            <div class="col-lg-12">
-                                                <div class="media">
-                                                    <a class="pull-left" href="#">
-                                                        <img class="media-object img-circle" src="http://lorempixel.com/30/30/people/1/" alt="">
-                                                    </a>
-                                                    <div class="media-body">
-                                                        <h4 class="media-heading">
-                                                            Jane Smith
-                                                            <span class="small pull-right">12:23 PM</span>
-                                                        </h4>
-                                                        <p>Hi, I wanted to make sure you got the latest product report. Did Roddy get it to you?</p>
+                                            <div class="row">
+                                                <div class="col-lg-12">
+                                                    <div class="media">
+                                                        <a class="pull-left" href="#">
+                                                            <img class="media-object img-circle" src="http://lorempixel.com/30/30/people/1/" alt="">
+                                                        </a>
+                                                        <div class="media-body">
+                                                            <h4 class="media-heading">
+                                                                Jane Smith
+                                                                <span class="small pull-right">12:23 PM</span>
+                                                            </h4>
+                                                            <p>Hi, I wanted to make sure you got the latest product report. Did Roddy get it to you?</p>
+                                                        </div>
                                                     </div>
                                                 </div>
                                             </div>
-                                        </div>
-                                        <hr>
-                                        <div class="row">
-                                            <div class="col-lg-12">
-                                                <div class="media">
-                                                    <a class="pull-left" href="#">
-                                                        <img class="media-object img-circle" src="http://lorempixel.com/30/30/people/7/" alt="">
-                                                    </a>
-                                                    <div class="media-body">
-                                                        <h4 class="media-heading">
-                                                            John Smith
-                                                            <span class="small pull-right">12:28 PM</span>
-                                                        </h4>
-                                                        <p>Yeah I did. Everything looks good.</p>
-                                                        <p>Did you have an update on purchase order #302?</p>
+                                            <hr>
+                                            <div class="row">
+                                                <div class="col-lg-12">
+                                                    <div class="media">
+                                                        <a class="pull-left" href="#">
+                                                            <img class="media-object img-circle" src="http://lorempixel.com/30/30/people/7/" alt="">
+                                                        </a>
+                                                        <div class="media-body">
+                                                            <h4 class="media-heading">
+                                                                John Smith
+                                                                <span class="small pull-right">12:28 PM</span>
+                                                            </h4>
+                                                            <p>Yeah I did. Everything looks good.</p>
+                                                            <p>Did you have an update on purchase order #302?</p>
+                                                        </div>
                                                     </div>
                                                 </div>
                                             </div>
-                                        </div>
-                                        <hr>
-                                        <div class="row">
-                                            <div class="col-lg-12">
-                                                <div class="media">
-                                                    <a class="pull-left" href="#">
-                                                        <img class="media-object img-circle" src="http://lorempixel.com/30/30/people/7/" alt="">
-                                                    </a>
-                                                    <div class="media-body">
-                                                        <h4 class="media-heading">
-                                                            Jane Smith
-                                                            <span class="small pull-right">12:39 PM</span>
-                                                        </h4>
-                                                        <p>No not yet, the transaction hasn't cleared yet. I will let you know as soon as everything goes through. Any idea where you want to get lunch today?</p>
+                                            <hr>
+                                            <div class="row">
+                                                <div class="col-lg-12">
+                                                    <div class="media">
+                                                        <a class="pull-left" href="#">
+                                                            <img class="media-object img-circle" src="http://lorempixel.com/30/30/people/7/" alt="">
+                                                        </a>
+                                                        <div class="media-body">
+                                                            <h4 class="media-heading">
+                                                                Jane Smith
+                                                                <span class="small pull-right">12:39 PM</span>
+                                                            </h4>
+                                                            <p>No not yet, the transaction hasn't cleared yet. I will let you know as soon as everything goes through. Any idea where you want to get lunch today?</p>
+                                                        </div>
                                                     </div>
                                                 </div>
                                             </div>
-                                        </div>
-                                        <hr>
+                                            <hr>*@
                                     </div>
                                 </div>
                                 <div class="portlet-footer">
                                     <form role="form">
                                         <div class="form-group">
-                                            <textarea class="form-control" placeholder="Enter message..."></textarea>
+                                            <textarea id="message" class="form-control" placeholder="Enter message..."></textarea>
                                         </div>
                                         <div class="form-group">
-                                            <button type="button" class="btn btn-default pull-right">Send</button>
+                                            <button type="button" id="btnSend" class="btn btn-default pull-right" onclick="sendMsg()">Send</button>
                                             <div class="clearfix"></div>
                                         </div>
                                     </form>
@@ -172,6 +169,9 @@
     </div>
 
     <script src="~/Scripts/Mizutech/webphone_api.js"></script>
+    <script src="~/Scripts/jquery.signalR-2.2.1.js"></script>
+    <script src="~/signalr/hubs"></script>
+    <script src="~/core/signalR/hubProvider.js"></script>
     @*<script>webphone_api.parameters.issdk = false;</script>*@
     <script>
         var serveraddress_input = "10.114.5.111:5060"
@@ -224,7 +224,7 @@
 
             document.getElementById('events').innerHTML = 'EVENT, Initializing...';
 
-            webphone_api.start();            
+            webphone_api.start();
         }
 
         function Call() {
@@ -398,10 +398,100 @@
         $("#btnChat").click(function () {
             $("#chat").show();
             $("#dialerpad").hide();
+            try{
+                setupChatHub();
+            }
+            catch(exception){
+                console.log('error');
+            }
         });
         $("#chat").hide();
 
-      
+       (function getManager() {
+
+            var id = 'aisha.siddiqui@dgsworld.com';
+            var userManager = "";
+            $.ajax({
+                url: 'https://localhost:44308/api/v1/users/manager',
+                type: 'POST',
+                dataType: 'json',
+                contentType: 'application/json; charset=utf-8',
+                data: JSON.stringify(id)
+            }).success(function (data, status, config, headers) {
+                window.userManager = data;
+            }).error(function (data, status, config, headers) {
+                window.userManager = null
+            });         
+        })();
+    
+        function onConnected() {
+            return "Email=" + window.emailID + "&Name=" + window.name + '&Status=' + 'Login'; // hassaankhan@gmail.com
+        }
+        function setupChatHub() {
+            var connection = $.hubConnection('https://demov3connect.webdialer.com' + '/signalr', { //'http://localhost:65251/'
+                useDefaultPath: false, jsonp: true, transport: 'webSockets'
+            });
+            //Starting Hub Connection
+            window.communicationHub = connection.createHubProxy('DWDCommunicationHub');
+            connection.qs = onConnected();
+            connection.start().done(function () {
+                console.log('Hub has started');
+                //On Broadcast from server to client
+                window.communicationHub.on('broadcastMessage', function (data) {
+                    debugger;
+                    sendMessageFromServer(data);
+                    //$rootScope.$broadcast('sendMessageFromServer', data);
+                });
+            });
+           
+        }
+        //To invoke server side send message function from client side
+        function sendMessage(senderName, message, recievername) {
+            window.communicationHub.invoke('sendMessage', {
+                senderName: senderName,
+                message: message,
+                recievername: recievername
+            });
+        }
+        //On broadcast from server handling of messages in chat
+        //  $scope.$on('sendMessageFromServer', function (event, data) {
+        function sendMessageFromServer(event, data) {
+            var senderName = data.senderName;
+            var receiverName = data.recievername;
+            var message = data.message;
+            var chat_show = $(".chat");
+            var formattedSenderName = senderName;@*//.substring(0, senderName.lastIndexOf('@'));*@
+
+            if (senderName == window.emailID) {
+                $scope.$apply(function () {
+                    chat_show.append('<li class="self">' + '<div class="avatar">' + '<img src="/Content/HYcn9xO.png" draggable="false"/>' + '</div>' + '<div class="msg">' + '<p><strong>' + 'You&nbsp:&nbsp&nbsp&nbsp' + '</strong> ' + '&nbsp&nbsp' + message + '&nbsp&nbsp' + '</p>' + '&nbsp&nbsp' + '<time>20:18</time>' + '</div>');
+                });
+                return;
+            }
+
+            if (receiverName == window.emailID) {
+                $scope.$apply(function () {
+                    chat_show.append('<li class="other">' + '<div class="avatar">' + '<img src="/Content/DY6gND0.png" draggable="false"/>' + '</div>' + '<div class="msg">' + '<p><strong>' + formattedSenderName + '&nbsp:&nbsp&nbsp&nbsp' + '</strong>' + message + '&nbsp&nbsp' + '</p>' + '&nbsp&nbsp' + '<time>20:18</time>' + '</div>');
+                });
+                return;
+            }
+        };
+        //key press event raised of send message
+        function sendmsg() {         
+            var message = $("#message").val();
+            sendMessage(window.emailID, message, window.userManager[0]);
+            $("#message").val("");
+            event.preventDefault();
+        }
+        $('#message').keypress(function (e) {
+            var code = (e.keyCode ? e.keyCode : e.which);
+            if (code == 13) {
+                sendmsg();
+            }
+        })
+        $("#btnSend").on('click',function () {
+           sendmsg();
+        });
         //});
     </script>
 </div>
