--- a/DGSConsole/SignalRChat/Views/Shared/_Layout-Mizu.cshtml
+++ b/DGSConsole/SignalRChat/Views/Shared/_Layout-Mizu.cshtml
@@ -13,7 +13,7 @@
     @*<link rel="stylesheet" href="~/Content/css/themes/jquery.mobile.icons.min.css" />*@
    
     <script src="~/Scripts/Mizutech/js/techdemo_example/jquery-1.9.1.min.js"></script>
-
+    <script src="~/Scripts/bootstrap.min.js"></script>
     @Styles.Render("~/Content/css-Mizu")
     @Scripts.Render("~/bundles/modernizr")
     <script src="~/Scripts/angular.min.js"></script>
