--- a/DGSConsole/SignalRChat/Views/Home/WebPhone.cshtml
+++ b/DGSConsole/SignalRChat/Views/Home/WebPhone.cshtml
@@ -22,58 +22,46 @@
     #self {
         display: none !important;
     }
+
     .group_btns {
-        width:100%;
-        float:left;
+        width: 100%;
+        float: left;
     }
-.group_btns .btn {
-    padding: 6px 7.2px;
-   }
-.left_btn {
+
+        .group_btns .btn {
+            padding: 6px 7.2px;
+        }
+
+    .left_btn {
         border-bottom-left-radius: 0;
-}
-.rgt_btn{
+    }
+
+    .rgt_btn {
         border-bottom-right-radius: 0;
-}
+    }
 </style>
 <script type='text/javascript'>
     window.emailID = '@email';
     window.name = '@name';
     window.ipAddress = '@ipAddress';
 </script>
-
-@using System.Security.Claims;
-@using System.Linq;
-@{
-    string email = "", name = "";
-    if (User.Identity.IsAuthenticated)
-    {
-        var user = User as ClaimsPrincipal;
-        var claims = user.Claims.ToList();
-        email = User.Identity.Name;
-        name = claims.Where(x => x.Type.Equals("Name")).FirstOrDefault().Value;
-    }
-    <script type='text/javascript'>
-        window.emailID = '@email';
-        window.name = '@name';      
-    </script>
-}
 <div class="dialpad-wraper" style="background-image:url(../../Scripts/Mizutech/images/3.png); background-size:cover; margin-top:50px;">
     <div class="dialpad-main">
-        <div class="group_btns" role="group" aria-label="..."> <!--btn-group btn-group-justified-->
+        <div class="group_btns" role="group" aria-label="...">
+            <!--btn-group btn-group-justified-->
             <div class="btn-group" role="group">
-                <!-- just copy this <section> and next script -->                
+                <!-- just copy this <section> and next script -->
                 <button id="btnDialer" type="button" class="btn left_btn btn-primary"><i class="glyphicon glyphicon-earphone"></i> Dialer</button>
                 <button id="btnChat" type="button" class="btn btn-success"><i class="glyphicon glyphicon-envelope"></i> Chat</button>
                 <button id="share-screen" type="button" class="btn btn-warning"><i class="glyphicon glyphicon-screenshot"></i><span style="font-size:11px"> Screen Share</span></button>
                 <a id="btnLink" class="btn rgt_btn btn-link" href="javasript:void(0)" target="_blank"><i class="glyphicon glyphicon-link"></i> Link</a>
             </div>
             @*<div class="btn-group" role="group">
-                <button id="btnChat" type="button" class="btn btn-success"><i class="glyphicon glyphicon-envelope"></i> Chat</button>
-            </div>
-            <div class="btn-group" role="group">
-                <button id="share-screen" type="button" class="btn btn-warning"><i class="glyphicon glyphicon-screenshot"></i><span style="font-size:11px"> Screen Share</span></button>
-            </div>*@
+                    <button id="btnChat" type="button" class="btn btn-success"><i class="glyphicon glyphicon-envelope"></i> Chat</button>
+                </div>
+                <div class="btn-group" role="group">
+                    <button id="share-screen" type="button" class="btn btn-warning"><i class="glyphicon glyphicon-screenshot"></i><span style="font-size:11px"> Screen Share</span></button>
+                </div>*@
         </div>
 
         <div id="dialerpad">
@@ -436,112 +424,130 @@
         $(document).ready(function () {
             $("#InboundStatus").click();
         });
-
-        $("#btnDialer").click(function () {
-            $("#dialerpad").show();
-            $("#chat").hide();
-        });
-        $("#btnChat").click(function () {
-            $("#chat").show();
-            $("#dialerpad").hide();
-            try{
-                setupChatHub();
-            }
-            catch(exception){
-                console.log('error');
-            }
-        });
-        $("#chat").hide();
-
-       (function getManager() {
-
-            var id = 'aisha.siddiqui@dgsworld.com';
-            var userManager = "";
-            $.ajax({
-                url: 'https://localhost:44308/api/v1/users/manager',
-                type: 'POST',
-                dataType: 'json',
-                contentType: 'application/json; charset=utf-8',
-                data: JSON.stringify(id)
-            }).success(function (data, status, config, headers) {
-                window.userManager = data;
-            }).error(function (data, status, config, headers) {
-                window.userManager = null
-            });         
-        })();
-    
-        function onConnected() {
-            return "Email=" + window.emailID + "&Name=" + window.name + '&Status=' + 'Login'; // hassaankhan@gmail.com
-        }
-        function setupChatHub() {
-            var connection = $.hubConnection('https://demov3connect.webdialer.com' + '/signalr', { //'http://localhost:65251/'
-                useDefaultPath: false, jsonp: true, transport: 'webSockets'
-            });
-            //Starting Hub Connection
-            window.communicationHub = connection.createHubProxy('DWDCommunicationHub');
-            connection.qs = onConnected();
-            connection.start().done(function () {
-                console.log('Hub has started');
-                //On Broadcast from server to client
-                window.communicationHub.on('broadcastMessage', function (data) {
-                    debugger;
-                    sendMessageFromServer(data);
-                    //$rootScope.$broadcast('sendMessageFromServer', data);
-                });
-            });
-           
-        }
-        //To invoke server side send message function from client side
-        function sendMessage(senderName, message, recievername) {
-            window.communicationHub.invoke('sendMessage', {
-                senderName: senderName,
-                message: message,
-                recievername: recievername
-            });
-        }
-        //On broadcast from server handling of messages in chat
-        //  $scope.$on('sendMessageFromServer', function (event, data) {
-        function sendMessageFromServer(event, data) {
-            var senderName = data.senderName;
-            var receiverName = data.recievername;
-            var message = data.message;
-            var chat_show = $(".chat");
-            var formattedSenderName = senderName;@*//.substring(0, senderName.lastIndexOf('@'));*@
-
-            if (senderName == window.emailID) {
-                $scope.$apply(function () {
-                    chat_show.append('<li class="self">' + '<div class="avatar">' + '<img src="/Content/HYcn9xO.png" draggable="false"/>' + '</div>' + '<div class="msg">' + '<p><strong>' + 'You&nbsp:&nbsp&nbsp&nbsp' + '</strong> ' + '&nbsp&nbsp' + message + '&nbsp&nbsp' + '</p>' + '&nbsp&nbsp' + '<time>20:18</time>' + '</div>');
-                });
-                return;
-            }
-
-            if (receiverName == window.emailID) {
-                $scope.$apply(function () {
-                    chat_show.append('<li class="other">' + '<div class="avatar">' + '<img src="/Content/DY6gND0.png" draggable="false"/>' + '</div>' + '<div class="msg">' + '<p><strong>' + formattedSenderName + '&nbsp:&nbsp&nbsp&nbsp' + '</strong>' + message + '&nbsp&nbsp' + '</p>' + '&nbsp&nbsp' + '<time>20:18</time>' + '</div>');
-                });
-                return;
-            }
-        };
-        //key press event raised of send message
-        function sendmsg() {         
-            var message = $("#message").val();
-            sendMessage(window.emailID, message, window.userManager[0]);
-            $("#message").val("");
-            event.preventDefault();
-        }
-        $('#message').keypress(function (e) {
-            var code = (e.keyCode ? e.keyCode : e.which);
-            if (code == 13) {
-                sendmsg();
-            }
-        })
-        $("#btnSend").on('click',function () {
-           sendmsg();
-        });
-        //});
     </script>
 
+    <script>
+        $(document).ready(function () {
+            $("#btnDialer").click(function () {
+                $("#dialerpad").show();
+                $("#chat").hide();
+            });
+            $("#btnChat").click(function () {
+                $("#chat").show();
+                $("#dialerpad").hide();
+                try {
+                    setupChatHub();
+                }
+                catch (exception) {
+                    console.log('error');
+                }
+            });
+            $("#chat").hide();
 
+
+            (function () {
+
+                //var id = 'aisha.siddiqui@dgsworld.com';
+                var userManager = "";
+                $.ajax({
+                    url: window.location.origin + '/api/v1/users/manager',
+                    type: 'POST',
+                    dataType: 'json',
+                    contentType: 'application/json; charset=utf-8',
+                    data: JSON.stringify(window.emailID)
+                }).success(function (data, status, config, headers) {
+                    window.userManager = data[0];
+                }).error(function (data, status, config, headers) {
+                    window.userManager = null
+                });
+            })();
+
+
+            //****SignalR related
+            //****
+            //*******************
+
+            function onConnected() {
+                return "Email=" + window.emailID + "&Name=" + window.name + '&Status=' + 'Login'; // hassaankhan@gmail.com
+            }
+
+            var hubConnection = "https://demov3connect.webdialer.com";
+
+            var connection = $.hubConnection(hubConnection + '/signalr', { useDefaultPath: false, jsonp: true, transport: 'webSockets' });
+            (function () {
+                connection.qs = onConnected();
+                window.communicationHub = connection.createHubProxy('DWDCommunicationHub');
+                connection.start().done(function () {
+                    console.log('Hub has started');
+
+                    (function () {
+                        window.communicationHub.invoke('newConnection');
+                    })();
+
+                    document.addEventListener("sendMessageToServer", function (e) {
+                        window.communicationHub.invoke('sendMessage', e.detail);
+                    }, false);
+
+                });
+            })();
+
+            window.communicationHub.on('broadcastMessage', function (data) {
+                messageReceivedFromServer(data);
+            });
+
+            window.communicationHub.on('newConnection', function (data) {
+
+                // handle if required sometime else
+            });
+
+            function sendMessageToServer(senderName, message, recievername) {
+                var e = new CustomEvent("sendMessageToServer", {
+                    detail: {
+                        senderName: senderName,
+                        message: message,
+                        recievername: recievername
+                    }
+                });
+                document.dispatchEvent(e);
+            }
+
+            function messageReceivedFromServer(data) {
+                var senderName = data.senderName;
+                var receiverName = data.recievername;
+                var message = data.message;
+                var chat_show = $(".chat");
+                var formattedSenderName = senderName;
+
+                if (senderName == window.emailID) {
+                    chat_show.append('<li class="self">' + '<div class="avatar">' + '<img src="/Content/HYcn9xO.png" draggable="false"/>' + '</div>' + '<div class="msg">' + '<p><strong>' + 'You&nbsp:&nbsp&nbsp&nbsp' + '</strong> ' + '&nbsp&nbsp' + message + '&nbsp&nbsp' + '</p>' + '&nbsp&nbsp' + '<time>20:18</time>' + '</div>');
+                    return;
+                }
+
+                if (receiverName == window.emailID) {
+                    chat_show.append('<li class="other">' + '<div class="avatar">' + '<img src="/Content/DY6gND0.png" draggable="false"/>' + '</div>' + '<div class="msg">' + '<p><strong>' + formattedSenderName + '&nbsp:&nbsp&nbsp&nbsp' + '</strong>' + message + '&nbsp&nbsp' + '</p>' + '&nbsp&nbsp' + '<time>20:18</time>' + '</div>');
+                    return;
+                }
+            };
+
+            $("#btnSend").on('click', function () {
+                var message = $("#message").val();
+                sendMessageToServer(window.emailID, message, window.userManager);
+                $("#message").val("");
+            });
+
+            $('#message').on('keypress', function (e) {
+                var code = (e.keyCode ? e.keyCode : e.which);
+                if (code == 13) {
+                    var message = $("#message").val();
+                    sendMessageToServer(window.emailID, message, window.userManager);
+                    $("#message").val("");
+                }
+            });
+
+        });
+
+
+    </script>
 
     @section scripts {
 
@@ -552,7 +558,7 @@
 
                     debugger
                     var strWindowFeatures = "location=yes,height=570,width=800,scrollbars=yes,status=yes";
-                    var URL = window.location.origin + '/home/sceenshare' ;
+                    var URL = window.location.origin + '/home/sceenshare';
                     var win = window.open(URL, "_blank", strWindowFeatures);
 
                 });
