--- a/DGSConsole/SignalRChat/Views/Home/WebPhone.cshtml
+++ b/DGSConsole/SignalRChat/Views/Home/WebPhone.cshtml
@@ -431,7 +431,7 @@
 
         $("#Consultancy").addClass("disbaleControl");
         $("#Cancel").addClass("disbaleControl");
-        //$("#Conference").addClass("disbaleControl");
+        $("#Conference").addClass("disbaleControl");
         $("#Toggle").addClass("disbaleControl");
 
         webphone_api.onCallStateChange(function (event, direction, peername, peerdisplayname) {
