--- a/DGSConsole/SignalRChat/Views/Home/WebPhone.cshtml
+++ b/DGSConsole/SignalRChat/Views/Home/WebPhone.cshtml
@@ -138,7 +138,7 @@
                         <div class="portlet portlet-default">
                             <div class="portlet-heading">
                                 <div class="portlet-title">
-                                    <h4><i class="fa fa-circle text-green"></i> <img src="/Content/DY6gND0.png" draggable="false" style="width:30px" /> <span id="receiverName">Jane Smith</span></h4>
+                                    <h4><i class="fa fa-circle text-green"></i> <img src="/Content/DY6gND0.png" draggable="false" style="width:30px" /> <span id="receiverName"></span></h4>
                                 </div>
 
                                 <div class="clearfix"></div>
@@ -146,64 +146,7 @@
                             <div id="chat" class="panel-collapse collapse in">
                                 <div>
                                     <div class="portlet-body chat-widget" style="overflow-y: auto; width: auto; height: 300px;">
-                                        <ol class="chat" style="overflow-y: auto;max-height: 300px;"></ol>
-                                        @*<div class="row">
-                                                <div class="col-lg-12">
-                                                    <p class="text-center text-muted small">January 1, 2014 at 12:23 PM</p>
-                                                </div>
-                                            </div>
-                                            <div class="row">
-                                                <div class="col-lg-12">
-                                                    <div class="media">
-                                                        <a class="pull-left" href="#">
-                                                            <img class="media-object img-circle" src="http://lorempixel.com/30/30/people/1/" alt="">
-                                                        </a>
-                                                        <div class="media-body">
-                                                            <h4 class="media-heading">
-                                                                Jane Smith
-                                                                <span class="small pull-right">12:23 PM</span>
-                                                            </h4>
-                                                            <p>Hi, I wanted to make sure you got the latest product report. Did Roddy get it to you?</p>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <hr>
-                                            <div class="row">
-                                                <div class="col-lg-12">
-                                                    <div class="media">
-                                                        <a class="pull-left" href="#">
-                                                            <img class="media-object img-circle" src="http://lorempixel.com/30/30/people/7/" alt="">
-                                                        </a>
-                                                        <div class="media-body">
-                                                            <h4 class="media-heading">
-                                                                John Smith
-                                                                <span class="small pull-right">12:28 PM</span>
-                                                            </h4>
-                                                            <p>Yeah I did. Everything looks good.</p>
-                                                            <p>Did you have an update on purchase order #302?</p>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <hr>
-                                            <div class="row">
-                                                <div class="col-lg-12">
-                                                    <div class="media">
-                                                        <a class="pull-left" href="#">
-                                                            <img class="media-object img-circle" src="http://lorempixel.com/30/30/people/7/" alt="">
-                                                        </a>
-                                                        <div class="media-body">
-                                                            <h4 class="media-heading">
-                                                                Jane Smith
-                                                                <span class="small pull-right">12:39 PM</span>
-                                                            </h4>
-                                                            <p>No not yet, the transaction hasn't cleared yet. I will let you know as soon as everything goes through. Any idea where you want to get lunch today?</p>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <hr>*@
+                                        <ol class="chat" style="overflow-y: auto;max-height: 300px;"></ol>                                    
                                     </div>
                                 </div>
                                 <div class="portlet-footer">
@@ -491,8 +434,8 @@
                 }
             });
             $("#chat").hide();
-
-
+            if(window.emailID!="")
+            $('#receiverName').text(window.emailID.split('.')[0]);
             (function () {
 
                 //var id = 'aisha.siddiqui@dgsworld.com';
@@ -504,7 +447,7 @@
                     contentType: 'application/json; charset=utf-8',
                     data: JSON.stringify(window.emailID)
                 }).success(function (data, status, config, headers) {
-                    window.userManager = data[0];
+                    window.userManager = data[0];                  
                 }).error(function (data, status, config, headers) {
                     window.userManager = null
                 });
@@ -564,7 +507,8 @@
                 var receiverName = data.recievername;
                 var message = data.message;
                 var chat_show = $(".chat");
-                var formattedSenderName = senderName;
+                if(senderName!=null || senderName!="")
+                var formattedSenderName = senderName.split('.')[0];
 
                 if (senderName == window.emailID) {
                     chat_show.append('<li class="self">' + '<div class="avatar">' + '<img src="/Content/HYcn9xO.png" draggable="false"/>' + '</div>' + '<div class="msg">' + '<p><strong>' + 'You&nbsp:&nbsp&nbsp&nbsp' + '</strong> ' + '&nbsp&nbsp' + message + '&nbsp&nbsp' + '</p>' + '&nbsp&nbsp' + '<time>20:18</time>' + '</div>');
@@ -591,7 +535,7 @@
                     $("#message").val("");
                 }
             });
-
+                      
         });
 
 
